<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_dog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/colorBtn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/pet_description"
            android:padding="@dimen/hvs_padding"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/attention_dog" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="vertical">

            <TextView
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:lineSpacingMultiplier="1.2"
                android:text="@string/dog_info_head_1"
                android:textStyle="bold" />

            <TextView
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/dog_info_body_1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="vertical">

            <TextView
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:lineSpacingMultiplier="1.2"
                android:text="@string/dog_info_head_2"
                android:textStyle="bold" />

            <TextView
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/dog_info_body_2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="vertical">

            <TextView
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:lineSpacingMultiplier="1.2"
                android:text="@string/dog_info_head_3"
                android:textStyle="bold" />

            <TextView
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/dog_info_body_3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="vertical">

            <TextView
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:lineSpacingMultiplier="1.2"
                android:text="@string/dog_info_head_4"
                android:textStyle="bold" />

            <TextView
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/dog_info_body_4" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="vertical">

            <TextView
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:lineSpacingMultiplier="1.2"
                android:text="@string/dog_info_head_5"
                android:textStyle="bold" />

            <TextView
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/dog_info_body_5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="vertical">

            <TextView
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:lineSpacingMultiplier="1.2"
                android:text="@string/dog_info_head_6"
                android:textStyle="bold" />

            <TextView
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/dog_info_body_6" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="vertical">

            <TextView
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:lineSpacingMultiplier="1.2"
                android:text="@string/dog_info_head_7"
                android:textStyle="bold" />

            <TextView
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/dog_info_body_7" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="vertical">

            <TextView
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:lineSpacingMultiplier="1.2"
                android:text="@string/dog_info_head_8"
                android:textStyle="bold" />

            <TextView
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/dog_info_body_8" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <TextView
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:lineSpacingMultiplier="1.2"
                android:text="@string/dog_info_head_9"
                android:textStyle="bold" />

            <TextView
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/dog_info_body_9" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>